tests/baselines/reference/exportDeclarationInInternalModule(target=es2015).errors.txt
exportDeclarationInInternalModule.ts(13,19): error TS1141: String literal expected.


==== exportDeclarationInInternalModule.ts (1 errors) ====
    class Bbb {
    }
    
    class Aaa extends Bbb { }
    
    namespace Aaa {
        export class SomeType { }
    }
    
    namespace Bbb {
        export class SomeType { }
    
        export * from Aaa;      // this line causes the nullref
                      ~~~
!!! error TS1141: String literal expected.
    }
    
    var a: Bbb.SomeType;
    